--- a/public/home.html
+++ b/public/home.html
@@ -55,7 +55,7 @@
   
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="p4.js"></script>
 </body>
 </html>
