--- a/public/home.html
+++ b/public/home.html
@@ -19,7 +19,10 @@
 
 <div class="big_users_container" id="big_users_container">
     <div class="users_header">
+          <div style="display: flex;">
     <h2 id="all_users_title"><i class="fa-solid fa-users"></i>all users (--)</h2>
+    <span class="hide_list" onclick="hide_users_list()"><i class="fa-solid fa-xmark"></i></span>
+  </div>
     <hr width="100%" style="border: 1px solid gray; margin-block: 10px;border-radius: 10px;">
     <div class="user_params" style="display: flex; justify-content: space-between; align-items: center;">
     <h3 id="user_name" class="user_name"><i class="fa-solid fa-user"></i>-- <span class="you_span" style="color: gray; font-size: 16px;">(YOU)</span></h3>
